tests/ui/numbers-arithmetic/overflowing-lsh-4.stderr
error: this arithmetic operation will overflow
  --> $DIR/overflowing-lsh-4.rs:11:13
   |
LL |     let x = 1_i8 << 17;
   |             ^^^^^^^^^^ attempt to shift left by `17_i32`, which would overflow
   |
note: the lint level is defined here
  --> $DIR/overflowing-lsh-4.rs:7:9
   |
LL | #![deny(arithmetic_overflow)]
   |         ^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

